test/inputs/toplevel/bad/snippet-unindented-multline-expansion.miros
string test
  snip
  $1
